歌手模模块

--- a/src/common/scss/icon.scss
+++ b/src/common/scss/icon.scss
@@ -17,7 +17,7 @@
 
 .icon-ttpodicon:before { content: "\e6bd"; }
 
-.icon-bofang2:before { content: "\e626"; }
+.icon-bofang:before { content: "\e626"; }
 
 .icon-chevron-thin-left:before { content: "\e607"; }
 
@@ -45,7 +45,7 @@
 
 .icon-zanting:before { content: "\e61e"; }
 
-.icon-iconfontdanquxunhuan2eps:before { content: "\e600"; }
+.icon-loop:before { content: "\e600"; }
 
 .icon-xueshufeng-suijibofang:before { content: "\e680"; }
 
